--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,7 @@
-// Начните писать стили здесь
+@import "global/variables.less";
+@import "global/global.less";
+@import "global/fonts.less";
+
+// Blocks
+
+@import "blocks/page.less";
