Добавляю картинку, делаю шапку.

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,4 +4,8 @@
 
 // Blocks
 
+@import "blocks/page__body.less";
 @import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/site-list.less";
