--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,6 @@
 .page-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   background-color: fade(@black, 70%);
   color: @white;
 }
