--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,13 @@
 .page-header {
-  display: flex;
-  justify-content: space-between;
   background-color: fade(@black, 70%);
   color: @white;
+}
+
+.page-header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  outline: 7px solid rgba(16, 13, 219, 0.123);
+  outline-offset: -7px;
 }
 
 .page-header__logo {
