Добавил цвет создал файл

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,6 +3,7 @@
 @verylightgray: #f2f2f2;
 @verydarkdesaturatedblue: #283645;
 @black: #000000;
+@verydarkblue: #1d2631;
 
 // Viewports
 @desktop-width: 1200px;
