--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,4 @@
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
+@import "blocks/page-main.less";
