Добавил цвет фона,цвет текста,размер текста для главной

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -4,6 +4,7 @@
 @verydarkdesaturatedblue: #283645;
 @black: #000000;
 @verydarkblue: #1d2631;
+@strongpink: #D22856;
 
 // Viewports
 @desktop-width: 1200px;
