--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,9 +4,13 @@
 
 // Blocks
 
-@import "blocks/page__body.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
+@import "blocks/proposal.less";
+@import "blocks/reviews.less";
+@import "blocks/tariff.less";
+@import "blocks/address.less";
+@import "blocks/page-footer.less";
