--- a/source/less/blocks/proposal.less
+++ b/source/less/blocks/proposal.less
@@ -7,8 +7,8 @@
 
 .proposal__list {
   background:
-    url(../../img/gallery/page-main/proposal/iphone\screen-3.jpg) no-repeat 33.5px 470px,
-    url(../../img/gallery/page-main/proposal/iphone\3.png) no-repeat 25px 435px,
+    url(../../img/gallery/page-main/proposal/iphonescreen-3.jpg) no-repeat 33.5px 470px,
+    url(../../img/gallery/page-main/proposal/iphone3.png) no-repeat 25px 435px,
     @verylightgray;
   list-style: none;
   padding: 0;
