--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,6 +1,7 @@
 // Colors
 @white: #ffffff;
 @verylightgray: #f2f2f2;
+@veryverylightgray: #e5e5e5;
 @verydarkdesaturatedblue: #283645;
 @black: #000000;
 @verydarkblue: #1d2631;
