--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,5 @@
 @import "blocks/tariff.less";
 @import "blocks/address.less";
 @import "blocks/page-footer.less";
+@import "blocks/contest.less";
+@import "blocks/contest__forms.less";
