Делаю стилизацию формам и модальным окнам

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -6,6 +6,8 @@
 @black: #000000;
 @verydarkblue: #1d2631;
 @strongpink: #D22856;
+@darkcyanlimegreen: #2aab6d;
+@limegreen: #1c9b5e;
 
 // Viewports
 @desktop-width: 1200px;
