--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,5 @@
 @import "blocks/page-footer.less";
 @import "blocks/contest.less";
 @import "blocks/contest__forms.less";
+@import "blocks/modal__error.less";
+@import "blocks/modal__despatch.less";
