--- a/source/less/blocks/contest__forms.less
+++ b/source/less/blocks/contest__forms.less
@@ -1,3 +1,9 @@
+.traveling__forms {
+  fieldset {
+    border: none;
+  }
+}
+
 .traveling-action {
   font-weight: normal;
   font-size: 14px;
@@ -51,5 +57,181 @@
     font-size: 18px;
     line-height: 30px;
     color: @verydarkdesaturatedblue;
+  }
+}
+
+// Radio
+
+.contest-forms__radio {
+  background-color: @verylightgray;
+
+  legend {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: @strongpink;
+    text-transform: uppercase;
+  }
+
+  label {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
+}
+
+// Progress-checkbox
+
+.contest-forms__progress-checkbox {
+  background-color: @verylightgray;
+
+  legend {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: @strongpink;
+    text-transform: uppercase;
+  }
+
+  label {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
+}
+
+// Contacts-info
+
+.contest-forms__contacts-info {
+  outline: 3px solid rgba(255, 251, 0, 0.8);
+  outline-offset: -3px;
+
+  label {
+    margin-left: 20px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: @strongpink;
+  }
+
+  input {
+    width: 238px;
+    margin-top: 5px;
+    padding: 12.5px 14px;
+    padding-left: 20px;
+    border: 2px solid @veryverylightgray;
+    border-radius: 1px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
+
+  input:hover {
+    outline: none;
+    border: 2px solid @verydarkdesaturatedblue;
+    border-radius: 1px;
+  }
+
+  input:active,
+  input:focus {
+    outline: none;
+    border: 2px solid @strongpink;
+    border-radius: 1px;
+  }
+
+  ::placeholder {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
+}
+
+// Textarea
+
+.contest-forms__textarea {
+  outline: 3px solid rgba(115, 255, 0, 0.8);
+  outline-offset: -3px;
+
+  legend {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: @strongpink;
+    text-transform: uppercase;
+  }
+
+  textarea {
+    width: 251px;
+    padding: 14px 3px 29px 18px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+    border: 2px solid @veryverylightgray;
+    border-radius: 1px;
+  }
+
+  textarea:hover {
+    outline: none;
+    border: 2px solid @verydarkdesaturatedblue;
+    border-radius: 1px;
+  }
+
+  textarea:active,
+  textarea:focus {
+    outline: none;
+    border: 2px solid @strongpink;
+    border-radius: 1px;
+  }
+
+  ::placeholder {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
+}
+
+// Button-form
+
+.button-form {
+  padding: 12.5px 44.3px;
+  background-color: @darkcyanlimegreen;
+  border: 2px solid @darkcyanlimegreen;
+  border-radius: 1px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: @white;
+}
+
+.button-form:hover {
+  outline: none;
+  background: @limegreen;
+  border: 2px solid @limegreen;
+  border-radius: 1px;
+}
+
+.button-form:focus,
+.button-form:active {
+  outline: none;
+  color: fade(@white, 70%);
+}
+
+.attention {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: @verydarkdesaturatedblue;
+
+  b {
+    color: @strongpink;
   }
 }
