--- a/source/less/blocks/modal__despatch.less
+++ b/source/less/blocks/modal__despatch.less
@@ -3,13 +3,28 @@
   box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
   border-radius: 5px;
 
+  .modal-despatch__wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 296px;
+    margin: 0 auto;
+    outline: 3px solid rgba(0, 38, 255, 0.8);
+    outline-offset: -3px;
+  }
+
   h2 {
+    margin-bottom: 33px;
+    text-align: center;
     font-weight: bold;
     font-size: 30px;
     line-height: 40px;
   }
 
   p {
+    margin: 0;
+    margin-bottom: 35px;
+    text-align: center;
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
@@ -20,13 +35,6 @@
 .modal__background-button {
   padding-top: 52px;
   padding-bottom: 52px;
-}
-
-.modal-despatch__wrapper {
-  width: 296px;
-  margin: 0 auto;
-  outline: 3px solid rgba(0, 38, 255, 0.8);
-  outline-offset: -3px;
 }
 
 .modal__background-button {
