Делаю стилизацию каталога

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,5 @@
 @import "blocks/contest__forms.less";
 @import "blocks/modal__error.less";
 @import "blocks/modal__despatch.less";
+@import "blocks/photos__gallery.less";
+@import "blocks/photos-filters.less";
