--- a/source/less/blocks/photos-filters.less
+++ b/source/less/blocks/photos-filters.less
@@ -49,3 +49,35 @@
   background-color: @white;
   color: @strongpink;
 }
+
+.button-user:hover {
+  outline: none;
+  background-color: @strongpink;
+  color: @white;
+}
+
+.button-user:focus,
+.button-user:active {
+  outline: none;
+  background-color: @strongpink;
+  color: rgba(255,255,255,30%);
+}
+
+.button-cancel {
+  border: 3px solid rgba(40,54,69,10%);
+  color: rgba(40,54,69,10%);
+}
+
+.button-cancel:hover {
+  outline: none;
+  border: 3px solid rgba(40,54,69,30%);
+  background-color: @verylightgray;
+  color: rgba(40,54,69,30%);
+}
+
+.button-cancel:focus,
+.button-cancel:active {
+  outline: none;
+  background-color: rgba(40,54,69,30%);
+  color: rgba(255,255,255,30%)
+}
