Добавил hover,focus на страницы,сделал кнопку на главной.

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,6 +1,24 @@
+.page-footer__logo:hover path {
+  fill: @strongpink;
+}
+
+.page-footer__logo:focus path,
+.page-footer__logo:active path {
+  fill-opacity: 0.3;
+}
+
 .copyright__text {
   font-weight: normal;
   font-size: 14px;
   line-height: 18px;
   color: @verydarkdesaturatedblue;
+}
+
+.copyright__logo:hover path {
+  fill: @verydarkdesaturatedblue;
+}
+
+.copyright__logo:focus path,
+.copyright__logo:active path {
+  fill: rgba(40,54,69,30%);
 }
