--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,3 +23,12 @@
     height: 40px;
   }
 }
+
+.page-header__logo:hover path {
+  fill: @strongpink;
+}
+
+.page-header__logo:focus path,
+.page-header__logo:active path {
+  fill: rgba(255,255,255,30%);
+}
