--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -12,6 +12,29 @@
   }
 }
 
+.page-download {
+  padding: 21px 38px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  background-color: @verydarkblue;
+  color: @white;
+  border: 3px solid @white;
+  border-radius: 29px;
+}
+
+.page-download:hover {
+  background-color: @white;
+  color: @strongpink;
+}
+
+.page-download:focus,
+.page-download:active {
+  outline: none;
+  background-color: @white;
+  color: rgba(210,40,86,30%);
+}
+
 .page-main__list {
   list-style: none;
   padding: 0;
