--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,3 +2,12 @@
   outline: 5px solid rgba(0, 255, 0, 0.8);
   outline-offset: -5px;
 }
+
+.site-list__item a:hover {
+  color: @strongpink;
+}
+
+.site-list__item a:focus,
+.site-list__item a:active {
+  color: rgba(255,255,255,30%);
+}
