--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -11,6 +11,15 @@
   line-height: 25px;
 }
 
+.address__mail:hover {
+  color: @verydarkdesaturatedblue;
+}
+
+.address__mail:focus,
+.address__mail:active {
+  color: rgba(40,54,69,30%);
+}
+
 .address__phone,
 .address__mail,
 .contacts__company {
