--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,15 +3,20 @@
   color: @white;
 }
 
-.page-header__wrapper {
-  display: flex;
-  justify-content: space-between;
-  outline: 7px solid rgba(16, 13, 219, 0.123);
-  outline-offset: -7px;
+@media (min-width: @tablet-width) {
+  .page-header__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 660px;
+    margin: 0 auto;
+    outline: 5px solid rgba(16, 13, 219, 0.123);
+    outline-offset: -5px;
+  }
 }
 
 .page-header__logo {
   height: 23px;
+  padding-left: 20px;
   outline: 5px solid rgba(255, 0, 0, 0.8);
   outline-offset: -5px;
 
@@ -22,6 +27,10 @@
   @media (min-width: @desktop-width) {
     height: 40px;
   }
+}
+
+.page-header__logo-image {
+  padding-left: 10px;
 }
 
 .page-header__logo:hover path {
