--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -53,9 +53,13 @@
   .comment__like {
     padding-left: 15px;
     padding-bottom: 26px;
-    font-weight: 400;
-    font-size: 12px;
     text-transform: uppercase;
     color: @strongpink;
+
+    b {
+      padding-left: 15px;
+      font-weight: 400;
+      font-size: 12px;
+    }
   }
 }
