--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,15 @@
+.page-footer__heading {
+  padding-top: 40px;
+}
+
+.page-footer__logo {
+  text-decoration: none;
+
+  svg {
+    padding-left: 10px;
+  }
+}
+
 .page-footer__logo:hover path {
   fill: @strongpink;
 }
