--- a/source/less/blocks/photos-filters.less
+++ b/source/less/blocks/photos-filters.less
@@ -1,11 +1,20 @@
-.photos__text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 30px;
-  color: @verydarkdesaturatedblue;
+.photos-filters {
+  background-color: @verylightgray;
+}
+
+.user__circulation {
+  background-color: @white;
+
+  .photos__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: @verydarkdesaturatedblue;
+  }
 }
 
 .range__filter {
+  display: flex;
   margin-bottom: 38px;
 }
 
@@ -49,6 +58,10 @@
     border: 2px solid @strongpink;
     border-radius: 50%;
   }
+}
+
+.post-it__user-foto {
+  padding-bottom: 41px;
 }
 
 .button-user {
