--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,10 +3,13 @@
   color: @white;
 }
 
+.page-header__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media (min-width: @tablet-width) {
   .page-header__wrapper {
-    display: flex;
-    justify-content: space-between;
     width: 660px;
     margin: 0 auto;
     outline: 5px solid rgba(16, 13, 219, 0.123);
@@ -14,11 +17,20 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .page-header__wrapper {
+    width: 940px;
+    height: 110px;
+  }
+
+  .main-nav__toogle {
+    display: none;
+  }
+}
+
 .page-header__logo {
   height: 23px;
   padding-left: 20px;
-  outline: 5px solid rgba(255, 0, 0, 0.8);
-  outline-offset: -5px;
 
   @media (min-width: @tablet-width) {
     height: 40px;
@@ -26,6 +38,7 @@
 
   @media (min-width: @desktop-width) {
     height: 40px;
+    margin-top: 27px;
   }
 }
 
