--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,3 +20,4 @@
 @import "blocks/modal__despatch.less";
 @import "blocks/photos__gallery.less";
 @import "blocks/photos-filters.less";
+@import "blocks/research.less";
