--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,39 @@
+.page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  margin: 0 auto;
+  outline: 5px solid rgba(16, 13, 219, 0.123);
+  outline-offset: -5px;
+
+  .page-footer__heading {
+    width: 145px;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
+
+  .page-footer__logo {
+    text-decoration: none;
+  }
+
+  .page-footer__copyright {
+    display: flex;
+    width: 145px;
+    margin: 0 auto;
+    margin-bottom: 51px;
+  }
+
+  .copyright__text {
+    margin: 0;
+    padding-top: 5px;
+    padding-right: 10px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: @verydarkdesaturatedblue;
+  }
+}
+
 .page-footer__logo:hover path {
   fill: @strongpink;
 }
@@ -7,13 +43,6 @@
   fill-opacity: 0.3;
 }
 
-.copyright__text {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 18px;
-  color: @verydarkdesaturatedblue;
-}
-
 .copyright__logo:hover path {
   fill: @verydarkdesaturatedblue;
 }
@@ -21,4 +50,46 @@
 .copyright__logo:focus path,
 .copyright__logo:active path {
   fill: rgba(40,54,69,30%);
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__wrapper {
+    width: 620px;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .page-footer__heading {
+      margin: 0;
+      margin-top: 36px;
+    }
+
+    .page-footer__copyright {
+      margin: 0;
+      margin-top: 40px;
+      margin-right: 10px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__wrapper {
+    width: 940px;
+
+    .page-footer__heading {
+      margin-top: 70px;
+      margin-bottom: 87px;
+      padding: 0;
+    }
+
+    .page-footer__copyright {
+      margin-top: 81px;
+      margin-bottom: 82px;
+      padding-top: 0;
+      padding-right: 10px;
+    }
+
+    .copyright__text {
+      font-size: 18px;
+    }
+  }
 }
