Пробую делать адаптивный фон

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,25 @@
 .page-header {
-  background-color: fade(@black, 70%);
+  background-image: url(../../img/gallery/header/mobile/back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% -5px;
+  background-size: cover;
   color: @white;
+
+  @media (min-width: @tablet-width) {
+    background-image: url(../../img/gallery/header/tablet/back-tablet.jpg);
+    background-position: 50% -5px;
+    background-size: cover;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url(../../img/gallery/header/desktop/back-desktop.jpg);
+    background-position: 50% -5px;
+    background-size: cover;
+  }
+
+  .page-header__background {
+    background-color: fade(@black, 70%);
+  }
 }
 
 .page-header__wrapper {
@@ -10,7 +29,7 @@
 
 @media (min-width: @tablet-width) {
   .page-header__wrapper {
-    width: 660px;
+    width: 620px;
     margin: 0 auto;
     outline: 5px solid rgba(16, 13, 219, 0.123);
     outline-offset: -5px;
@@ -31,6 +50,7 @@
 .page-header__logo {
   height: 23px;
   padding-left: 20px;
+  text-decoration: none;
 
   @media (min-width: @tablet-width) {
     height: 40px;
@@ -54,3 +74,182 @@
 .page-header__logo:active path {
   fill: rgba(255,255,255,30%);
 }
+
+// Header__download
+
+.header__download {
+  color: @white;
+  background:
+  url(../../img/gallery/header/mobile/screen.jpg) no-repeat 50% 122px,
+  url(../../img/gallery/header/mobile/phone.png) no-repeat 50% 90px;
+  outline: 5px solid rgba(221, 208, 27, 0.932);
+  outline-offset: -5px;
+
+  @media (min-width: @tablet-width) {
+   background:
+   url(../../img/gallery/header/tablet/screen.jpg) no-repeat 82.5% 85px,
+   url(../../img/gallery/header/tablet/phone.png) no-repeat 50% 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background:
+    url(../../img/gallery/header/desktop/screen.jpg) no-repeat 77.2% 190px,
+    url(../../img/gallery/header/desktop/phone.png) no-repeat 20% 125px;
+  }
+}
+
+.main__header-download {
+  background-color: @verydarkblue;
+  margin-top: 320px;
+}
+
+@media (min-width: @tablet-width) {
+  .main__header-download {
+    margin: 0;
+    background-color: inherit;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .download-header__wrapper {
+    width: 620px;
+    margin: 0 auto;
+    outline: 3px solid rgba(64, 238, 29, 0.842);
+    outline-offset: -3px;
+
+    .page-download {
+      margin-top: 39px;
+      margin-bottom: 28px;
+      padding: 21px 53.5px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .download-header__wrapper {
+    width: 940px;
+
+    .page-download {
+      margin-top: 51px;
+      margin-bottom: 49px;
+      padding: 20px 38px;
+      font-size: 21px;
+    }
+
+    .main__list {
+      margin-bottom: 42px;
+    }
+  }
+}
+
+.title__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  outline: 4px solid rgba(29, 238, 210, 0.842);
+  outline-offset: -4px;
+  .title {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 120%;
+    text-align: center;
+    color: @white;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .title__wrapper {
+    width: 300px;
+    margin: 0;
+    padding-top: 102px;
+
+    .title {
+      margin: 0;
+      font-size: 40px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .title__wrapper {
+    width: 300px;
+
+    .title {
+      font-size: 50px;
+      line-height: 68px;
+    }
+  }
+}
+
+.main-list__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  outline: 4px solid rgba(231, 9, 65, 0.959);
+  outline-offset: -4px;
+
+  @media (min-width: @tablet-width) {
+    width: 300px;
+    margin: 0;
+
+    .header-download__text {
+      font-size: 18px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    .header-download__text {
+      padding-bottom: 130px;
+    }
+  }
+}
+
+
+.page-download {
+  margin-top: 28px;
+  margin-bottom: 20px;
+  padding: 21px 43.5px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  background-color: @verydarkblue;
+  color: @white;
+  border: 3px solid @white;
+  border-radius: 29px;
+}
+
+.page-download:hover {
+  background-color: @white;
+  color: @strongpink;
+}
+
+.page-download:focus,
+.page-download:active {
+  outline: none;
+  background-color: @white;
+  color: rgba(210,40,86,30%);
+}
+
+.main__list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  list-style: none;
+  padding: 0;
+}
+
+.main-list__item {
+  justify-content: space-between;
+}
+
+.main-item__logo-image2,
+.main-item__logo-image3 {
+  padding-top: 5px;
+}
+
+.header-download__text {
+  padding-bottom: 38px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+}
+
