--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -31,7 +31,7 @@
   .page-header__wrapper {
     width: 620px;
     margin: 0 auto;
-    outline: 5px solid rgba(16, 13, 219, 0.123);
+    outline: 5px solid rgba(196, 236, 17, 0.904);
     outline-offset: -5px;
   }
 }
@@ -253,3 +253,43 @@
   text-align: center;
 }
 
+// Forms
+
+.contest__wrapper {
+  margin: 0 auto;
+}
+
+.contest__title {
+  margin: 0;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 33px;
+  text-align: center;
+}
+
+.contest__wrapper {
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    padding-top: 81px;
+    padding-bottom: 74px;
+
+    .contest__title {
+      width: 620px;
+      font-size: 50px;
+      line-height: 68px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding-top: 74px;
+    padding-bottom: 104px;
+
+    .contest__title {
+      width: 747px;
+      font-size: 50px;
+      line-height: 68px;
+    }
+  }
+}
